[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/fase 1/Peguntas/pergunta1.gd" type="Script" id=1]
[ext_resource path="res://sprites/Tela perguntas.png" type="Texture" id=2]
[ext_resource path="res://sprites/Button.png" type="Texture" id=3]
[ext_resource path="res://sprites/Buttonmuitoescuro.png" type="Texture" id=4]
[ext_resource path="res://sprites/Buttonescuro.png" type="Texture" id=5]
[ext_resource path="res://Fonte/Lato-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Fonte/Concert_One/ConcertOne-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://scenes/fase 1/Peguntas/FeedbackErro1.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/fase 1/Peguntas/FeedbackAcerto1.tscn" type="PackedScene" id=9]
[ext_resource path="res://musics and sfx/quests.tscn" type="PackedScene" id=10]

[sub_resource type="TileSet" id=1]
0/name = "Tela perguntas.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, -1, 364, 643 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Tela perguntas.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 721, 1, 360, 47 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Tela perguntas.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 1083, 54, 357, 147 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 18
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="pergunta2" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 30.0, 339.0, 43.0, 328.0 ]
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 5, 5 )
format = 1
tile_data = PoolIntArray( -65536, 0, 0, 0, 1, 0, 720897, 2, 0 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 5.0
margin_top = 224.0
margin_right = 355.0
margin_bottom = 349.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="Label" type="Label" parent="TextureButton"]
margin_left = 24.0
margin_top = 36.0
margin_right = 333.0
margin_bottom = 84.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Não, já que essas atitudes são
 apenas para o divertimento."
align = 1

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 5.0
margin_top = 360.0
margin_right = 355.0
margin_bottom = 485.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="Label" type="Label" parent="TextureButton2"]
margin_left = 26.0
margin_top = 31.0
margin_right = 329.0
margin_bottom = 97.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Sim, porque brincadeiras desse
tipo não devem ocorrer
no ambiente de trabalho."
align = 1

[node name="TextureButton3" type="TextureButton" parent="."]
margin_left = 5.0
margin_top = 496.0
margin_right = 355.0
margin_bottom = 621.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="Label" type="Label" parent="TextureButton3"]
margin_left = 17.0
margin_top = 18.0
margin_right = 337.0
margin_bottom = 107.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Sim, se for de maneira
repetitiva e prolongada, com
o objetivode atingir
a honra e a imagem do empregado."
align = 1

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 212.0
margin_right = 360.0
margin_bottom = 213.0
color = Color( 0.666667, 0.686275, 0.952941, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 9.0
margin_top = 96.0
margin_right = 359.0
margin_bottom = 173.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Ser alvo de piadas e risadas dos 
colegas ou do chefe pode ser
 considerado assédio moral?
"
align = 1

[node name="Points" type="Label" parent="."]
margin_left = 248.0
margin_top = 17.0
margin_right = 299.0
margin_bottom = 33.0

[node name="FeedbackErro1" parent="." instance=ExtResource( 8 )]

[node name="FeedbackAcerto1" parent="." instance=ExtResource( 9 )]

[node name="sounds" parent="." instance=ExtResource( 10 )]

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="button_up" from="TextureButton2" to="." method="_on_TextureButton2_button_up"]
[connection signal="button_up" from="TextureButton3" to="." method="_on_TextureButton3_button_up"]
